ajout des notification par un checkbox au lieu d'un bouton.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,28 +11,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <!--    TODO A supprimer-->
     <Button
         android:id="@+id/DetailsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="95dp"
+        android:layout_marginBottom="2dp"
         android:text="Detail" />
-
-    <Button
-        android:id="@+id/NotificationButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="47dp"
-        android:text="notify" />
-
-    <Button
-        android:id="@+id/DenotificationButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="7dp"
-        android:text="Cancel" />
 
 </RelativeLayout>
