--- a/app/src/main/res/layout/activity_description_du_concert.xml
+++ b/app/src/main/res/layout/activity_description_du_concert.xml
@@ -35,34 +35,33 @@
         android:id="@+id/Concert_Description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/Label_Description"
-        android:layout_alignBottom="@+id/Concert_Artiste"
+        android:layout_alignBottom="@+id/Label_Description"
+        android:layout_marginTop="53dp"
         android:layout_marginRight="-85dp"
-        android:layout_marginBottom="-28dp" />
+        android:layout_marginBottom="-45dp" />
 
     <TextView
         android:id="@+id/Label_Facebook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/Label_Description"
-        android:layout_marginBottom="-43dp"
+        android:layout_above="@+id/Concert_Description"
+        android:layout_marginBottom="-178dp"
         android:text="@string/facebook" />
 
     <TextView
         android:id="@+id/Concert_Facebook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/Label_Facebook"
-        android:layout_alignBottom="@+id/Concert_Description"
-        android:layout_marginRight="-94dp"
-        android:layout_marginBottom="-23dp" />
+        android:layout_alignBottom="@+id/Label_Facebook"
+        android:layout_marginRight="192dp"
+        android:layout_marginBottom="-48dp" />
 
     <TextView
         android:id="@+id/Label_Scene"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/Label_Facebook"
-        android:layout_marginBottom="-43dp"
+        android:layout_above="@+id/Concert_Facebook"
+        android:layout_marginBottom="-92dp"
         android:text="@string/scene" />
 
     <TextView
@@ -71,15 +70,15 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/Label_Scene"
         android:layout_alignBottom="@+id/Concert_Facebook"
-        android:layout_marginRight="-94dp"
-        android:layout_marginBottom="-26dp" />
+        android:layout_marginRight="-234dp"
+        android:layout_marginBottom="-63dp" />
 
     <TextView
         android:id="@+id/Label_Jour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/Label_Scene"
-        android:layout_marginBottom="-43dp"
+        android:layout_marginBottom="-53dp"
         android:text="@string/jour" />
 
     <TextView
@@ -88,15 +87,15 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/Label_Jour"
         android:layout_alignBottom="@+id/Concert_Scene"
-        android:layout_marginRight="-93dp"
-        android:layout_marginBottom="-22dp" />
+        android:layout_marginRight="-102dp"
+        android:layout_marginBottom="-34dp" />
 
     <TextView
         android:id="@+id/Label_Heure"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/Label_Jour"
-        android:layout_marginBottom="-43dp"
+        android:layout_marginBottom="-58dp"
         android:text="@string/heure" />
 
     <TextView
@@ -106,7 +105,7 @@
         android:layout_alignRight="@+id/Label_Heure"
         android:layout_alignBottom="@+id/Concert_Jour"
         android:layout_marginRight="-93dp"
-        android:layout_marginBottom="-27dp" />
+        android:layout_marginBottom="-36dp" />
 
     <ImageView
         android:id="@+id/Concert_Image"
@@ -114,5 +113,11 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/Concert_Heure"
         android:layout_marginBottom="-9dp" />
+
+    <CheckBox
+        android:id="@+id/Concert_Favori"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"/>
 
 </RelativeLayout>
