modification de la premiere vue et refacto commencement

--- a/app/src/main/res/layout/item_groupe.xml
+++ b/app/src/main/res/layout/item_groupe.xml
@@ -10,35 +10,33 @@
 
         <ImageView
             android:id="@+id/imagegroup_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
+            android:layout_width="250px"
+            android:layout_height="250px"
+            android:scaleType="fitXY">
         </ImageView>
 
-
-        <TextView
-            android:id="@+id/textgroup_view"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
-        </TextView>
+            <TextView
+                android:id="@+id/textgroup_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="toto"
+                android:textAlignment="center"
+                android:textColor="#9C27B0"
+                android:textSize="18sp" />
 
-        <ImageView
-            android:id="@+id/nomgroup_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/nomgroup_view"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp" />
 
-        </ImageView>
-
-        <LinearLayout
-            android:id="@+id/imagefavori_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-        </LinearLayout>
-
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
