--- a/app/src/main/res/layout/activity_description_du_concert.xml
+++ b/app/src/main/res/layout/activity_description_du_concert.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DescriptionDuConcertActivity"
-    android:background="#814DDD">
+    android:background="#000000">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,10 +17,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:fontFamily="cursive"
             android:text="Nom de l artiste"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:textSize="30sp"
+            android:textSize="60sp"
             android:textStyle="bold" />
     </RelativeLayout>
 
@@ -112,9 +113,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/Table_information_concert"
+        android:background="#FFFFFF"
         android:elevation="2dp"
-        app:menu="@menu/item_navigation_description"
-        android:background="#814DDD"/>
+        app:menu="@menu/item_navigation_description" />
 
     <FrameLayout
         android:id="@+id/container_description_menu"
