--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -4,13 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.DescriptionFragment"
-    android:background="#814DDD">
+    android:background="#000000">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/Concert_Description"
+        android:padding="20sp"
+        android:justificationMode="inter_word"
         android:layout_gravity="center"
         android:text="@string/description"
         android:textSize="15sp"
