--- a/app/src/main/res/layout/item_spinner.xml
+++ b/app/src/main/res/layout/item_spinner.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="#000000"
     android:layout_height="match_parent">
 
     <TextView
@@ -8,6 +9,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/possibilite_filtre"
         android:textStyle="italic"
+        android:textColor="#FFFFFF"
         android:textAlignment="center"/>
 
 </LinearLayout>
